--- a/document/main.tex
+++ b/document/main.tex
@@ -133,7 +133,7 @@ evitar subir claves por error.
 El código fuente completo de este proyecto está disponible en el siguiente repositorio de GitHub:
 
 \begin{center}
-\textbf{\url{https://github.com/tu-usuario/chatbot-experto-vinos}}
+\textbf{\url{https://github.com/Robdres/TAF_vinos/}}
 \end{center}
 
 \subsection{Requisitos previos}
@@ -149,8 +149,9 @@ El código fuente completo de este proyecto está disponible en el siguiente rep
 \begin{enumerate}
     \item Clonar el repositorio:
     \begin{verbatim}
-git clone https://github.com/tu-usuario/chatbot-experto-vinos.git
-cd chatbot-experto-vinos
+git clone https://github.com/
+    Robdres/TAF_vinos/
+cd TAF_vino
     \end{verbatim}
 
     \item Instalar las dependencias:
